...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionnaireActivity">

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/uploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload image"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBabyDOBLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newBabyNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/newBabyDOBLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newBabyNameActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Name"
            android:textAlignment="center"
            android:textColor="#72000000" />
    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintBottom_toTopOf="@+id/uploadImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBabyNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newBabyDOBActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Date of Birth"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
